tests/snapshots/run_wpt_conformance__litert_reciprocal_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reciprocal.https.any.js reciprocal float16 0D scalar, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Reciprocal { input: 0, options: Some(MLOperatorOptions { label: "" }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reciprocalInput: f16[];
  }

  nodes {
    [reciprocalOutput] = reciprocal(reciprocalInput, label="");
  }

  outputs { reciprocalOutput; }
}
