tests/snapshots/run_wpt_conformance__litert_reciprocal_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reciprocal.https.any.js",
    "reciprocal float32 1D tensor",
    "litert",
    "PASS",
)
